add image and update text for 404

--- a/content/404.md
+++ b/content/404.md
@@ -1,13 +1,14 @@
 ---
 title: Page Not Found
 ---
-You seem to have stumbled across a broken link!  This is probably the result of
-our content migration from the old Galaxy Wiki to the new Galaxy Community Hub.
-While we've tried to create a full mapping with automatic redirects to the
-corresponding pages on the new Galaxy Community Hub, some links may no longer
+
+<img src="/images/undraw-illustrations/404.svg" alt="error 404" style="width:230px; float:right;"/>
+
+You seem to have stumbled across a broken link! This is probably the result of
+our content migration. While we've tried to create a full mapping with automatic redirects to the corresponding pages on the new Galaxy Community Hub, some links may no longer
 be valid.
 
-To locate the content you were looking for, please try the search box above.  That will search many Galaxy related sites. To see just content from this web site, select the **Hub** tab from the results.
+To locate the content you were looking for, please try the search box above. That will search many Galaxy related sites. 
 
-If you could please report any broken links on [the Galaxy Community Hub issue
+If you could __please report any broken links__ on [the Galaxy Community Hub issue
 tracker](https://github.com/galaxyproject/galaxy-hub/issues), it'd be helpful.
